--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ add_subdirectory(WebsocketCppService)
 add_subdirectory(WebsocketCppClientService)
 add_subdirectory(MqMessageService)
 add_subdirectory(MqttService)
+add_subdirectory(AwsFleetProv)
 add_subdirectory(CommandService)
 add_subdirectory(CommandLineService)
 add_subdirectory(startup)
