--- a/AwsFleetProv/CMakeLists.txt
+++ b/AwsFleetProv/CMakeLists.txt
@@ -5,7 +5,7 @@ project(AwsFleetProv)
 set(COMPONENT shape::AwsFleetProv)
 DeclareShapeComponent(${COMPONENT})
 AddShapeProvidedInterface(${COMPONENT} shape::IMqttConnectionParsProvider)
-AddShapeRequiredInterface(${COMPONENT} oegw::IIdentityProvider MANDATORY SINGLE)
+AddShapeRequiredInterface(${COMPONENT} shape::IIdentityProvider MANDATORY SINGLE)
 AddShapeRequiredInterface(${COMPONENT} shape::IMqttService MANDATORY SINGLE)
 AddShapeRequiredInterface(${COMPONENT} shape::ILaunchService MANDATORY SINGLE)
 AddShapeRequiredInterface(${COMPONENT} shape::ITraceService MANDATORY MULTIPLE)
